[project]
name = "ComfyUI-NunchakuFluxLoraStacker"
version = "1.18"
description = "A standalone ComfyUI custom node for Nunchaku FLUX LoRA Stacking with dynamic UI control."
authors = [{ name = "ussoewwin" }]
license = { file = "LICENSE" }
requires-python = ">=3.10, <3.13"

[project.urls]
Repository = "https://github.com/ussoewwin/ComfyUI-NunchakuFluxLoraStacker"

[tool.comfy]
PublisherId = "ussoewwin"
DisplayName = "ComfyUI-NunchakuFluxLoraStacker"
Icon = "https://raw.githubusercontent.com/nunchaku-tech/nunchaku/96615bd93a1f0d2cf98039fddecfec43ce34cc96/assets/nunchaku.svg"

